--- a/themes/chrysalis/templates/content/paragraph--cards-row-of-1.html.twig
+++ b/themes/chrysalis/templates/content/paragraph--cards-row-of-1.html.twig
@@ -53,7 +53,9 @@
             <h2 class="section-title">{{ content.field_paragraph_title }}</h2>
         {% endif %}
         
-        {{ content.field_select_3_cards }}
+        <div class="card-row">
+        {{ content.field_select_1_card }}
+        </div>
         
     {% endblock %}
   </div>
