--- a/themes/chrysalis/templates/content/paragraph--cards-row-of-2.html.twig
+++ b/themes/chrysalis/templates/content/paragraph--cards-row-of-2.html.twig
@@ -54,7 +54,7 @@
         {% endif %}
         
         <div class="card-row">
-        {{ content.field_card }}
+        {{ content.field_select_2_cards }}
         </div>
         
     {% endblock %}
